--- a/BestBuyMVC/Views/Product/ViewProduct.cshtml
+++ b/BestBuyMVC/Views/Product/ViewProduct.cshtml
@@ -27,6 +27,7 @@
 <div style="display: block">
     <a href="/Sale/SalesByProduct/@Model.ProductId">View Product Sales</a>
 </div>
+<a asp-controller="Sale" asp-action="SalesByProduct" asp-route-id="@Model.ProductId"> Product Sales</a>
 
 <div style="display: block">
 
