--- a/BestBuyMVC/Views/Product/InsertProduct.cshtml
+++ b/BestBuyMVC/Views/Product/InsertProduct.cshtml
@@ -5,7 +5,7 @@
 
 @using (Html.BeginForm("InsertProductToDatabase", "Product", "Post"))
 {
-    <input asp-for="ProductId" type="hidden" value="" />
+    <input asp-for="ProductId" type="hidden" value="@Model.ProductId" />
     <label asp-for="Name" class="custom-control-label">Name</label>
 
     <input type="text" name="Name" class="form-control" value="" />
