--- a/BestBuyMVC/Views/Product/Index.cshtml
+++ b/BestBuyMVC/Views/Product/Index.cshtml
@@ -1,11 +1,19 @@
 ﻿@using BestBuyMVC.bestbuy
 @model IEnumerable<Product>
 <h2>Products</h2>
-
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<style>
+body {
+  font-family: "Sofia", sans-serif;
+}
+</style>
+</head>
 <div style="display: block">
     <a href="/product/InsertProduct/">Create a New Product</a>
 </div>
-
+<body>Hello!!
+    <img src="Images/Screenshot (87).png"/>
 <table class="table">
     <tr>
         <th>ID</th>
@@ -29,3 +37,4 @@
     }
 
 </table>
+</body>
