--- a/BestBuyMVC/Views/Product/InsertProduct.cshtml
+++ b/BestBuyMVC/Views/Product/InsertProduct.cshtml
@@ -5,16 +5,20 @@
 
 @using (Html.BeginForm("InsertProductToDatabase", "Product", "Post"))
 {
+@*      <input placeholder="Type Date" type="text" onfocus="(this.type = 'date')"  id="date">*@
+
     <input asp-for="ProductId" type="hidden" value="@Model.ProductId" />
     <label asp-for="Name" class="custom-control-label">Name</label>
 
     <input type="text" name="Name" class="form-control" value="" />
     <label asp-for="Price" class="control-label">Price</label>
 
+@*    <input type="date" name="date" class="custom-control-label">
+    <label asp-for="Date" class="control-label">Date</label>*@
     <input type="number" step="0.01" name="Price" class="form-control" />
 
     <div class="form-group">
-        <label for="">Select a Category</label>
+        <label for="">Select a Category</label>S
         <select class="form-control" name="CategoryID" value="">
             @foreach (var cat in Model.Categories)
             {
