--- a/BestBuyMVC/Views/Sale/AddSale.cshtml
+++ b/BestBuyMVC/Views/Sale/AddSale.cshtml
@@ -1,5 +1,35 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@*@model Sale
+
+<h2>Create a New Product</h2>
+
+@using (Html.BeginForm("InsertProductToDatabase", "Product", "Post"))
+{
+    <input asp-for="SalesId" type="hidden" value="@Model.SalesId" />
+    <label asp-for="Name" class="custom-control-label">Name</label>
+
+    <input type="text" name="Name" class="form-control" value="" />
+    <label asp-for="Quantity" class="control-label">Quantity</label>
+
+    <input type="number" step="0.01" name="Price" class="form-control" />
+
+    <div class="form-group">
+        <label for="">Select a Product</label>
+        <select class="form-control" name="CategoryID" value="">
+            @foreach (var product in Model.Products)
+            {
+                <option value="@product.ProductId">@product.ProductId @product.Name</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="">Select an Employee</label>
+        <select class="form-control" name="CategoryID" value="">
+            @foreach (var employee in Model.Employees)
+            {
+                <option value="@employee.EmployeeId">@employee.EmployeeId @employee.FirstName @employee.LastName</option>
+            }
+        </select>
+    </div>
+
+    <input type="submit" value="Create Product" class="btn btn-primary" />
+}*@
